--- a/index.html
+++ b/index.html
@@ -19,7 +19,21 @@
 </head>
 <body>
 
-  Home
+  <header class="header">
+    <nav class="flex flex-jc-sb flex-ai-c">
+      <a href="#" class="header-logo">
+        <img src="images/logo.svg" alt="easybank">
+      </a>
+      <a href="#" class="header-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </a>
+    </nav>
+
+  </header>
+
+  <!-- Home
   About
   Contact
   Blog
@@ -99,7 +113,7 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 
 
   <script src="app/js/script.js"></script>
