show header links

--- a/index.html
+++ b/index.html
@@ -29,15 +29,23 @@
         <span></span>
         <span></span>
       </a>
+
+      <div class="header-links">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <a href="#">Blog</a>
+        <a href="#">Careers</a>
+      </div>
+
+      
     </nav>
 
   </header>
 
-  <!-- Home
-  About
-  Contact
-  Blog
-  Careers
+
+
+  <!-- 
 
   Request Invite
 
