change font menu links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
   <link href="app/css/style.css" rel="stylesheet">
 
   <title>Frontend Mentor | Easybank landing page</title>
@@ -37,8 +37,8 @@
         <a href="#">Blog</a>
         <a href="#">Careers</a>
       </div>
-
       
+
     </nav>
 
   </header>
