--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <a href="#">Careers</a>
       </div>
       
+      <a href="#" class="button header-btn">Request Invite</a>
+    
 
     </nav>
 
