clean up navbar css

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       <a href="#" class="header-logo">
         <img src="images/logo.svg" alt="easybank">
       </a>
-      <a href="#" class="header-menu">
+      <a href="#" class="header-menu hide-for-desktop">
         <span></span>
         <span></span>
         <span></span>
       </a>
 
-      <div class="header-links">
+      <div class="header-links hide-for-mobile">
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
@@ -38,7 +38,9 @@
         <a href="#">Careers</a>
       </div>
       
-      <a href="#" class="button header-btn">Request Invite</a>
+      <a href="#" class="button header-btn hide-for-mobile">
+        Request Invite
+      </a>
     
 
     </nav>
