--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href="#" class="header-logo">
         <img src="images/logo.svg" alt="easybank">
       </a>
-      <a href="#" class="header-menu hide-for-desktop">
+      <a id="burger-icon" href="#" class="header-menu hide-for-desktop">
         <span></span>
         <span></span>
         <span></span>
