show hide overlay

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 <body>
 
   <header class="header">
+    <div class="overlay">
+
+    </div>
     <nav class="flex flex-jc-sb flex-ai-c">
       <a href="#" class="header-logo">
         <img src="images/logo.svg" alt="easybank">
@@ -49,7 +52,7 @@
 
 
 
-  <!-- 
+
 
   Request Invite
 
