--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="#" class="header-logo">
         <img src="images/logo.svg" alt="easybank">
       </a>
-      <a id="burger-icon" href="#" class="header-menu hide-for-desktop">
+      <a id="burger-icon" href="#" class="header-toggle hide-for-desktop">
         <span></span>
         <span></span>
         <span></span>
@@ -47,6 +47,13 @@
     
 
     </nav>
+    <div class="header-menu container">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <a href="#">Blog</a>
+        <a href="#">Careers</a>
+    </div>
 
   </header>
 
