add header menu faded

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
   <header class="header">
-    <div class="overlay">
+    <div class="overlay faded">
 
     </div>
     <nav class="flex flex-jc-sb flex-ai-c">
@@ -47,7 +47,7 @@
     
 
     </nav>
-    <div class="header-menu container">
+    <div class="header-menu container faded">
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
