--- a/index.html
+++ b/index.html
@@ -57,24 +57,20 @@
 
   </header>
 
+  <section class="section1">
+    <div class="section1-image"></div>
+    <div class="section1-text">
+      <h1>Next generation digital banking</h1>
+      <p>Take your financial life online. Your Easybank account will be a one-stop-shop 
+        for spending, saving, budgeting, investing, and much more.</p>
+        <a href="#" class="button section1-btn">
+          Request Invite
+        </a>
+    </div>
+  </section>
 
-
-
-
-  Request Invite
-
-
-
-  Next generation digital banking
-
-  Take your financial life online. Your Easybank account will be a one-stop-shop 
-  for spending, saving, budgeting, investing, and much more.
-
-  Request Invite
-
-
-
-  Why choose Easybank?
+ 
+  <!-- Why choose Easybank?
 
   We leverage Open Banking to turn your bank account into your financial hub. Control 
   your finances like never before.
@@ -135,7 +131,7 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+  </div> --> 
 
 
   <script src="app/js/script.js"></script>
