edit text first section

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 
   <section class="section1">
     <div class="section1-image"></div>
-    <div class="section1-text">
+    <div class="section1-text container">
       <h1>Next generation digital banking</h1>
       <p>Take your financial life online. Your Easybank account will be a one-stop-shop 
         for spending, saving, budgeting, investing, and much more.</p>
-        <a href="#" class="button section1-btn">
-          Request Invite
-        </a>
+      <a href="#" class="button section1-btn">
+        Request Invite
+      </a>
     </div>
   </section>
 
