add container class to nav and section1

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="overlay faded">
 
     </div>
-    <nav class="flex flex-jc-sb flex-ai-c">
+    <nav class="flex flex-jc-sb flex-ai-c container">
       <a href="#" class="header-logo">
         <img src="images/logo.svg" alt="easybank">
       </a>
@@ -57,9 +57,9 @@
 
   </header>
 
-  <section class="section1">
+  <section class="section1 container">
     <div class="section1-image"></div>
-    <div class="section1-text container">
+    <div class="section1-text">
       <h1>Next generation digital banking</h1>
       <p>Take your financial life online. Your Easybank account will be a one-stop-shop 
         for spending, saving, budgeting, investing, and much more.</p>
