--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <section class="section1 container">
     <div class="section1-image"></div>
-    <div class="section1-text">
+    <div class="section1-text container-pd-all">
       <h1>Next generation digital banking</h1>
       <p>Take your financial life online. Your Easybank account will be a one-stop-shop 
         for spending, saving, budgeting, investing, and much more.</p>
