--- a/index.html
+++ b/index.html
@@ -57,16 +57,19 @@
 
   </header>
 
-  <section class="section1 container">
-    <div class="section1-image"></div>
-    <div class="section1-text container-pd-all">
-      <h1>Next generation digital banking</h1>
-      <p>Take your financial life online. Your Easybank account will be a one-stop-shop 
-        for spending, saving, budgeting, investing, and much more.</p>
-      <a href="#" class="button section1-btn">
-        Request Invite
-      </a>
+  <section class="section1">
+    <div class="container">
+        <div class="section1-image"></div>
+        <div class="section1-text container-pd-all">
+        <h1>Next generation digital banking</h1>
+        <p>Take your financial life online. Your Easybank account will be a one-stop-shop 
+          for spending, saving, budgeting, investing, and much more.</p>
+        <a href="#" class="button section1-btn">
+          Request Invite
+        </a>
+        </div>
     </div>
+    
   </section>
 
  
