--- a/index.html
+++ b/index.html
@@ -72,74 +72,76 @@
     
   </section>
 
-  <section class="section2 container">
-    <div class="section2-header">
-      <div class="section2-icon">
+  <section class="section2">
+    <div class="section2-main container">
+      <div class="section2-header">
+        <div class="section2-icon">
 
-      </div>
-      <div class="section2-subheader">
+        </div>
+        <div class="section2-subheader">
 
-      </div>
-      <div class="section2-text">
+        </div>
+        <div class="section2-text">
 
+        </div>
+        <h2>Why choose Easybank?</h2>
+        <p>
+          We leverage Open Banking to turn your bank account into your financial hub. Control 
+          your finances like never before.
+        </p>
       </div>
-      <h2>Why choose Easybank?</h2>
-      <p>
-        We leverage Open Banking to turn your bank account into your financial hub. Control 
-        your finances like never before.
-      </p>
-    </div>
-    <div class="section2-container">
-      <div class="section2-item">
-        <div class="section2-icon">
-          <img src="/images/icon-online.svg" alt="online">
+      <div class="section2-container">
+        <div class="section2-item">
+          <div class="section2-icon">
+            <img src="/images/icon-online.svg" alt="online">
+          </div>
+          <div class="section2-subheader">
+            <h3>  Online Banking</h3>
+          </div>
+          <div class="section2-text">
+            <p>Our modern web and mobile applications allow you to keep track of your finances 
+              wherever you are in the world.
+            </p>
+          </div>    
         </div>
-        <div class="section2-subheader">
-          <h3>  Online Banking</h3>
+        <div class="section2-item">
+          <div class="section2-icon">
+            <img src="/images/icon-budgeting.svg" alt="budgeting">
+          </div>
+          <div class="section2-subheader">
+            <h3> Simple Budgeting</h3>
+          </div>
+          <div class="section2-text">
+            <p>See exactly where your money goes each month. Receive notifications when you’re 
+              close to hitting your limits.
+            </p>
+          </div>
         </div>
-        <div class="section2-text">
-          <p>Our modern web and mobile applications allow you to keep track of your finances 
-            wherever you are in the world.
-          </p>
-        </div>    
-      </div>
-      <div class="section2-item">
-        <div class="section2-icon">
-          <img src="/images/icon-budgeting.svg" alt="budgeting">
+        <div class="section2-item">
+          <div class="section2-icon">
+            <img src="/images/icon-onboarding.svg" alt="onboarding">
+          </div>
+          <div class="section2-subheader">
+            <h3>Fast Onboarding</h3>
+          </div>
+          <div class="section2-text">
+            <p> We don’t do branches. Open your account in minutes online and start taking control 
+              of your finances right away.
+            </p>
+          </div>
         </div>
-        <div class="section2-subheader">
-          <h3> Simple Budgeting</h3>
-        </div>
-        <div class="section2-text">
-          <p>See exactly where your money goes each month. Receive notifications when you’re 
-            close to hitting your limits.
-          </p>
-        </div>
-      </div>
-      <div class="section2-item">
-        <div class="section2-icon">
-          <img src="/images/icon-onboarding.svg" alt="onboarding">
-        </div>
-        <div class="section2-subheader">
-          <h3>Fast Onboarding</h3>
-        </div>
-        <div class="section2-text">
-          <p> We don’t do branches. Open your account in minutes online and start taking control 
-            of your finances right away.
-          </p>
-        </div>
-      </div>
-      <div class="section2-item">
-        <div class="section2-icon">
-          <img src="/images/icon-api.svg" alt="api">
-        </div>
-        <div class="section2-subheader">
-          <h3>Open API</h3>
-        </div>
-        <div class="section2-text">
-          <p>Manage your savings, investments, pension, and much more from one account. Tracking 
-            your money has never been easier.
-          </p>
+        <div class="section2-item">
+          <div class="section2-icon">
+            <img src="/images/icon-api.svg" alt="api">
+          </div>
+          <div class="section2-subheader">
+            <h3>Open API</h3>
+          </div>
+          <div class="section2-text">
+            <p>Manage your savings, investments, pension, and much more from one account. Tracking 
+              your money has never been easier.
+            </p>
+          </div>
         </div>
       </div>
     </div>
