edit header global props

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </section>
 
   <section class="section2">
-    <div class="section2-main container">
+    <div class="section2-main container container-pd-all">
       <div class="section2-header">
         <div class="section2-icon">
 
