add footer in index html

--- a/index.html
+++ b/index.html
@@ -202,21 +202,47 @@
 
     </div>
   </section>
-  
+  <footer class="footer">
+    <div class="footer-container container container-pd-all">
+      <img class="footer-logo" src="/images/logo.svg" alt="logo">
+      <div class="footer-icons">
+        <a href="#">
+          <img src="/images/icon-facebook.svg" alt="icon-facebook">
+        </a>
+        <a href="#">
+          <img src="/images/icon-youtube.svg" alt="icon-youtube">
+        </a>
+        <a href="#">
+          <img src="/images/icon-twitter.svg" alt="icon-twitter">
+        </a>
+        <a href="#">
+          <img src="/images/icon-pinterest.svg" alt="icon-pinterest">
+        </a>
+        <a href="#">
+          <img src="/images/icon-instagram.svg" alt="icon-instagram">
+        </a>
+      </div>
+      <div class="footer-links">
+        <a href="#">About Us</a>
+        <a href="#">Contact</a>
+        <a href="#">Blog</a>
+        <a href="#">Careers</a>
+        <a href="#">Support</a>
+        <a href="#">Privacy Policy</a>
+      </div>
+      <div class="footer-button">
+        <a href="#" class="button hide-for-mobile">
+        Request Invite
+      </a>
+      </div>
+      <div class="footer-copyright">
+        © Easybank. All Rights Reserved
+      </div>
+    </div>
+  </footer>
+
+
   <!--
-
-  
-
-  About Us
-  Contact
-  Blog
-  Careers
-  Support
-  Privacy Policy
-
-  Request Invite
-
-  © Easybank. All Rights Reserved
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
