edit footer sass

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
   </section>
   <footer class="footer">
     <div class="footer-container container container-pd-all">
-      <img class="footer-logo" src="/images/logo.svg" alt="logo">
+      <img class="footer-logo" src="/images/logo-dark.svg" alt="logo">
       <div class="footer-icons">
         <a href="#">
           <img src="/images/icon-facebook.svg" alt="icon-facebook">
@@ -222,22 +222,25 @@
           <img src="/images/icon-instagram.svg" alt="icon-instagram">
         </a>
       </div>
-      <div class="footer-links">
+      <div class="footer-links col1">
         <a href="#">About Us</a>
         <a href="#">Contact</a>
         <a href="#">Blog</a>
+      </div>
+      <div class="footer-links col2">
         <a href="#">Careers</a>
         <a href="#">Support</a>
         <a href="#">Privacy Policy</a>
       </div>
-      <div class="footer-button">
+      <div class="footer-cta">
         <a href="#" class="button hide-for-mobile">
         Request Invite
-      </a>
+        </a>
+        <div class="footer-copyright">
+          © Easybank. All Rights Reserved
+        </div>
       </div>
-      <div class="footer-copyright">
-        © Easybank. All Rights Reserved
-      </div>
+      
     </div>
   </footer>
 
