edit footer for mobile

--- a/index.html
+++ b/index.html
@@ -203,8 +203,10 @@
     </div>
   </section>
   <footer class="footer">
-    <div class="footer-container container container-pd-all">
-      <img class="footer-logo" src="/images/logo-dark.svg" alt="logo">
+    <div class="footer-container container container-pd-lr">
+      <a href="#">
+        <img class="footer-logo" src="/images/logo-dark.svg" alt="logo">
+      </a>
       <div class="footer-icons">
         <a href="#">
           <img src="/images/icon-facebook.svg" alt="icon-facebook">
@@ -233,14 +235,13 @@
         <a href="#">Privacy Policy</a>
       </div>
       <div class="footer-cta">
-        <a href="#" class="button hide-for-mobile">
+        <a href="#" class="button">
         Request Invite
         </a>
-        <div class="footer-copyright">
-          © Easybank. All Rights Reserved
-        </div>
       </div>
-      
+      <div class="footer-copyright">
+        © Easybank. All Rights Reserved
+      </div>
     </div>
   </footer>
 
