--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <nav class="flex flex-jc-sb flex-ai-c container">
       <a href="#" class="header-logo">
-        <img src="images/logo.svg" alt="easybank">
+        <img src="./images/logo.svg" alt="easybank">
       </a>
       <a id="burger-icon" href="#" class="header-toggle hide-for-desktop">
         <span></span>
