--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="section2-container">
         <div class="section2-item">
           <div class="section2-icon">
-            <img src="/images/icon-online.svg" alt="online">
+            <img src="./images/icon-online.svg" alt="online">
           </div>
           <div class="section2-subheader">
             <h3>Online Banking</h3>
@@ -97,7 +97,7 @@
         </div>
         <div class="section2-item">
           <div class="section2-icon">
-            <img src="/images/icon-budgeting.svg" alt="budgeting">
+            <img src="./images/icon-budgeting.svg" alt="budgeting">
           </div>
           <div class="section2-subheader">
             <h3>Simple Budgeting</h3>
@@ -110,7 +110,7 @@
         </div>
         <div class="section2-item">
           <div class="section2-icon">
-            <img src="/images/icon-onboarding.svg" alt="onboarding">
+            <img src="./images/icon-onboarding.svg" alt="onboarding">
           </div>
           <div class="section2-subheader">
             <h3>Fast Onboarding</h3>
@@ -123,7 +123,7 @@
         </div>
         <div class="section2-item">
           <div class="section2-icon">
-            <img src="/images/icon-api.svg" alt="api">
+            <img src="./images/icon-api.svg" alt="api">
           </div>
           <div class="section2-subheader">
             <h3>Open API</h3>
@@ -143,7 +143,7 @@
       <div class="section3-grid">
 
         <a href="#" class="section3-item">
-          <div class="section3-image" style="background-image:url(/images/image-currency.jpg)"></div>
+          <div class="section3-image" style="background-image:url(./images/image-currency.jpg)"></div>
           
           <div class="section3-text">
             <div class="section3-author">By Claire Robinson</div>
@@ -158,7 +158,7 @@
         </a>
 
         <a href="#" class="section3-item">
-          <div class="section3-image" style="background-image:url(/images/image-restaurant.jpg)"></div>
+          <div class="section3-image" style="background-image:url(./images/image-restaurant.jpg)"></div>
           <div class="section3-text">
             <div class="section3-author">By Wilson Hutton</div>
             <div class="section3-title">
@@ -172,7 +172,7 @@
         </a>
 
         <a href="#" class="section3-item">
-          <div class="section3-image" style="background-image:url(/images/image-plane.jpg)"></div>
+          <div class="section3-image" style="background-image:url(./images/image-plane.jpg)"></div>
           <div class="section3-text">
             <div class="section3-author">By Wilson Hutton</div>
             <div class="section3-title">
@@ -186,7 +186,7 @@
         </a>
 
         <a href="#" class="section3-item">
-          <div class="section3-image" style="background-image:url(/images/image-confetti.jpg)"></div>
+          <div class="section3-image" style="background-image:url(./images/image-confetti.jpg)"></div>
           <div class="section3-text">
             <div class="section3-author">By Claire Robinson</div>
             <div class="section3-title">
@@ -205,7 +205,7 @@
   <footer class="footer">
     <div class="footer-container container container-pd-lr">
       <a href="#">
-        <img class="footer-logo" src="/images/logo-dark.svg" alt="logo">
+        <img class="footer-logo" src="./images/logo-dark.svg" alt="logo">
       </a>
       <div class="footer-icons">
         <a href="#">
